testsuite/vhdl/parser_rules/test_data/expression_failure/expression_failure_001.expected
expression_failure/expression_failure_001.input:2:19: parse error: Test Suite Full Match Error! Unparsed input left!
"0011" nor "0010" nor "1000"
                  ^ <<-- here
